Bug 448980 - Renaming sensors in a grid display style does not rename the actual objects in the row in System Monitor
Summary: Renaming sensors in a grid display style does not rename the actual objects i...
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.23.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 447846 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-22 21:52 UTC by Tarczal Dániel János
Modified: 2022-05-11 10:52 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Picture of the bug (56.07 KB, image/png)
2022-01-24 16:26 UTC, Tarczal Dániel János
Details
row title renaming example (124.60 KB, image/png)
2022-01-24 19:23 UTC, galder
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tarczal Dániel János 2022-01-22 21:52:52 UTC
SUMMARY
I have tried different display styles inside the grid style with the same result as in the title.
It is probably just a little QoL thing.


STEPS TO REPRODUCE
1. put sensors in a row
2. change the display style to grid
3. try to rename the sensors

OBSERVED RESULT
the name of the renamed sensors stayed in their default in the row

EXPECTED RESULT
the name of the renamed sensors would change in the row

SOFTWARE/OS VERSIONS
Linux Kernel Version: 5.16.2
(available in About System)
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Comment 1 galder 2022-01-23 16:48:09 UTC
Hello,
I try the reproduce the issue. When you say " in their default in the row", are you saying that for example CPU all > Total Usage would stay as Total usage even we rename it?

I manage to reproduce some renaming issue only with widgets in the main panel. Widgets created in the Systems Monitor or directly in the desktop are following correctly the title field.
When you say "the title stay with whatever sensor the default name" you mean that doesn't follow the title field and stays with the sensor default name for example  in CPU all, "Total Usage"

Is this the issue you are referring to?

My system is:
Kubuntu 21.10
Plasma 5.23.5
frameworks: 5.90.0

Regards,
Galder
Comment 2 Tarczal Dániel János 2022-01-24 16:26:26 UTC
Created attachment 145861 [details]
Picture of the bug

Hello,

I attached a picture of this that might help visualize this more.
I don't really know what you are refering to as "main panel", in System Monitor I created a new page, added a row, and changed the display style to grid. Also, I created a desktop widget from the same row, and there it displays correctly.

For the title, I meant the title of my bug report, sorry if I wasn't clear.

Regards,
Dani
Comment 3 galder 2022-01-24 19:23:33 UTC
Created attachment 145877 [details]
row title renaming example
Comment 4 galder 2022-01-24 19:24:35 UTC
Hello,
with "main panel" I was referring to the desktop panel. 
Sorry for the confusion, I'm a newbie triaging issues.

I'm bite confuse.
I have attached a screenshot with a new page in the system Settings. 
You can only change the name of the title of the row(in the top). I don't think can you rename the actual sensors names.
If you are looking for renaming the actual sensors, that would a feature request.
Please let me know if this is what you are looking for.
Thanks
Galder
Comment 5 Arjen Hiemstra 2022-01-24 20:56:29 UTC
Renaming sensors has been added for 5.23.

I can confirm this bug, apparently I forgot to add support for renaming when I created this face.
Comment 6 galder 2022-01-24 21:10:23 UTC
Perfect!
Comment 7 Bug Janitor Service 2022-01-27 14:57:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/208
Comment 8 Arjen Hiemstra 2022-02-01 15:26:12 UTC
Git commit a1ec6b8dc3db8f8b4b1cf9137a41ccc9a471888d by Arjen Hiemstra.
Committed on 01/02/2022 at 15:24.
Pushed by ahiemstra into branch 'master'.

Support changing sensor label names for the Grid face

This was apparently forgotten when creating the face in the first place.

M  +20   -0    faces/FaceLoader.cpp
M  +10   -0    faces/FaceLoader.h
M  +2    -0    faces/facepackages/facegrid/contents/ui/FaceControl.qml

https://invent.kde.org/plasma/libksysguard/commit/a1ec6b8dc3db8f8b4b1cf9137a41ccc9a471888d
Comment 9 Arjen Hiemstra 2022-02-01 16:10:08 UTC
Git commit 88075dc213a55de359bd783be8a17aef5a334ae0 by Arjen Hiemstra.
Committed on 01/02/2022 at 16:10.
Pushed by ahiemstra into branch 'Plasma/5.24'.

Support changing sensor label names for the Grid face

This was apparently forgotten when creating the face in the first place.


(cherry picked from commit a1ec6b8dc3db8f8b4b1cf9137a41ccc9a471888d)

M  +20   -0    faces/FaceLoader.cpp
M  +10   -0    faces/FaceLoader.h
M  +2    -0    faces/facepackages/facegrid/contents/ui/FaceControl.qml

https://invent.kde.org/plasma/libksysguard/commit/88075dc213a55de359bd783be8a17aef5a334ae0
Comment 10 Arjen Hiemstra 2022-05-11 10:52:05 UTC
*** Bug 447846 has been marked as a duplicate of this bug. ***