Support changing sensor label names for the Grid face

This was apparently forgotten when creating the face in the first place.

BUG: 448980